# interp-simd

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cpp/: nd_image_interpolation.c  ni_interpolation.c  ni_interpolation_avx2.c
include/: ccallback.h  nd_image.h  nd_image_interpolation.h  ni_interpolation.h  scipy_config.h
src/interp_ndimage/: __init__.py  _interpolation.py  _nd_image.cpp  _ndimage.cpp
src/interp_ndimage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  array_api_stub.py  test_interpolation.py
