[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "pybind11>=2.12",
    "numpy>=1.24.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "interp-ndimage"
version = "0.1.0"
description = "Pybind11-based drop-in replacement for SciPy ndimage interpolation (orders 0 and 1)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Ilan" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

